@@ -20,6 +20,10 @@ NOTE: The dashboard has known display issues in Internet Explorer 6.
 * Can display the unit test output for passed builds.
 * Enhanced the dashboard to display artifacts directories as tree structure.
 
+general
+======================
+* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard. Patch by Allan Wick. 
+
 
 CruiseControl Release Notes - 2.7
 
